Fix gap

--- a/style.css
+++ b/style.css
@@ -839,8 +839,8 @@ body.dark__mode ul li {
 
 /* Accessories sections */
 .accessories__container {
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top:  68px;
+    margin-bottom: 80px;
     padding-left: 15px;
     padding-right: 15px;
 }
